--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3001
-DATABASE_URL=mongodb+srv://claudia:WPh0oQn9kTQBYKOK@cluster0-v9y3q.mongodb.net/test?retryWrites=true 
+DATABASE_URL=mongodb://localhost:27017 
