--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.4",
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "sensor-htu21d": "^1.1.2"
   }
 }
