--- a/frontend/the-starter-app/package.json
+++ b/frontend/the-starter-app/package.json
@@ -15,7 +15,8 @@
     "react-native-progress": "^3.6.0",
     "react-native-scrollable-tab-view": "^0.10.0",
     "react-native-vector-icons": "^6.4.2",
-    "react-navigation": "^3.9.2"
+    "react-navigation": "^3.9.2",
+    "react-navigation-header-buttons": "^2.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
