--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.5.5",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "python-shell": "^1.0.7",
     "sensor-htu21d": "^1.1.2"
   }
 }
